# json2nix

./: .gitignore  LICENSE  README.md  bla.json  bla.nix  example.cabal  example.json  example.nix  flake.nix  json2nix.cabal  main.hs
src/: Main.hs  Main2.hs
