cabal-version:   3.0
name:            json2nix
version:         0.1.0.0
license:         NONE
author:          Sem Pruijs
maintainer:      contact@pruijs.net
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      split
    hs-source-dirs:   src
    default-language: Haskell2010
